[gd_scene load_steps=4 format=3 uid="uid://sbymxgsvql4j"]

[ext_resource type="Texture2D" uid="uid://dpaia26uirm3w" path="res://assets/art/weapons/magic_missle.png" id="1_8gfk8"]
[ext_resource type="Script" path="res://src/Weapons/magic_missle.gd" id="1_c5yng"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4jjg0"]
radius = 20.0998

[node name="MagicMissle" type="Area2D" groups=["attack"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_c5yng")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_8gfk8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4jjg0")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="DespawnTimer" type="Timer" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
